[websocket] Add websocket server implementation

--- a/src/websockets/CMakeLists.txt
+++ b/src/websockets/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(ws STATIC
     Url.cpp
     WebsocketFactory.cpp
     libwebsockets/LibWebsocketClient.cpp
+    libwebsockets/LibWebsocketServer.cpp
 
     stubs/WebsocketClientStub.cpp
 )
