[central system] Add skeleton of central system implementation and examples

--- a/examples/quick_start_chargepoint/config/quick_start_chargepoint.ini
+++ b/examples/quick_start_chargepoint/config/quick_start_chargepoint.ini
@@ -1,5 +1,5 @@
-[Stack]
-DatabasePath=./ocpp.db
+[ChargePoint]
+DatabasePath=./quick_start_chargepoint.db
 JsonSchemasPath=../../schemas/ocpp16/
 ConnexionUrl=ws://127.0.0.1:8180/steve/websocket/CentralSystemService/
 Tlsv12CipherList=ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-WITH-AES-256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:TLS-PSK-WITH-AES-256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-WITH-AES-128-GCM-SHA256:DHE-RSA-AES128-GCM-SHA256:TLS-PSK-WITH-AES-128-GCM-SHA256
