--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 # Subdirectories
+add_subdirectory(centralsystem)
 add_subdirectory(chargepoint)
 add_subdirectory(config)
 add_subdirectory(messages)
