--- a/src/config/CMakeLists.txt
+++ b/src/config/CMakeLists.txt
@@ -4,13 +4,15 @@
 
 
 # Library target
-add_library(config INTERFACE)
+add_library(config InternalConfigManager.cpp)
 
 # Exported includes
 target_include_directories(config INTERFACE .)
 
 # Dependencies
-target_link_libraries(config INTERFACE
+target_link_libraries(config
     types
     helpers
+    database
+    log
 )
