--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 # Subdirectories
 add_subdirectory(common)
+add_subdirectory(quick_start_centralsystem)
 add_subdirectory(quick_start_chargepoint)
 add_subdirectory(remote_chargepoint)
