--- a/examples/quick_start_centralsystem/config/quick_start_centralsystem.ini
+++ b/examples/quick_start_centralsystem/config/quick_start_centralsystem.ini
@@ -1,9 +1,16 @@
 [CentralSystem]
-DatabasePath=./quick_start_central_system.db
+DatabasePath=./quick_start_centralsystem.db
 JsonSchemasPath=../../schemas/ocpp16/
 ListenUrl=ws://127.0.0.1:8180/steve/websocket/CentralSystemService/
+HttpBasicAuthent=false
+CallRequestTimeout=2000
 Tlsv12CipherList=ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-WITH-AES-256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:TLS-PSK-WITH-AES-256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-WITH-AES-128-GCM-SHA256:DHE-RSA-AES128-GCM-SHA256:TLS-PSK-WITH-AES-128-GCM-SHA256
 Tlsv13CipherList=TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384
 TlsEcdhCurve=prime256v1
-CallRequestTimeout=2000
+TlsServerCertificate=../../examples/certificates/OpenOCPP_CentralSystem.pem
+TlsServerCertificatePrivateKey=../../examples/certificates/OpenOCPP_CentralSystem-private.key
+TlsServerCertificatePrivateKeyPassphrase=
+TlsServerCertificateCa=../../examples/certificates/OpenOCPP_CA.pem
+TlsClientCertificateCa=
+TlsClientCertificateAuthent=false
 LogMaxEntriesCount=2000
