--- a/examples/quick_start_centralsystem/config/quick_start_centralsystem.ini
+++ b/examples/quick_start_centralsystem/config/quick_start_centralsystem.ini
@@ -9,10 +9,10 @@ HttpBasicAuthent=false
 Tlsv12CipherList=ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-WITH-AES-256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:TLS-PSK-WITH-AES-256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-WITH-AES-128-GCM-SHA256:DHE-RSA-AES128-GCM-SHA256:TLS-PSK-WITH-AES-128-GCM-SHA256
 Tlsv13CipherList=TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384
 TlsEcdhCurve=prime256v1
-TlsServerCertificate=../../examples/certificates/OpenOCPP_CentralSystem.pem
-TlsServerCertificatePrivateKey=../../examples/certificates/OpenOCPP_CentralSystem-private.key
+TlsServerCertificate=../../examples/certificates/open-ocpp_central-system.crt
+TlsServerCertificatePrivateKey=../../examples/certificates/open-ocpp_central-system.key
 TlsServerCertificatePrivateKeyPassphrase=
-TlsServerCertificateCa=../../examples/certificates/OpenOCPP_CA.pem
-TlsClientCertificateCa=
+TlsServerCertificateCa=../../examples/certificates/open-ocpp_ca.crt
+TlsClientCertificateCa=../../examples/certificates/open-ocpp_ca.crt
 TlsClientCertificateAuthent=false
 LogMaxEntriesCount=2000
