[central system] Add websocket ping interval configuration

--- a/examples/quick_start_centralsystem/config/quick_start_centralsystem.ini
+++ b/examples/quick_start_centralsystem/config/quick_start_centralsystem.ini
@@ -3,6 +3,7 @@ DatabasePath=./quick_start_centralsystem.db
 JsonSchemasPath=../../schemas/ocpp16/
 ListenUrl=ws://127.0.0.1:8180/steve/websocket/CentralSystemService/
 CallRequestTimeout=2000
+WebSocketPingInterval=30
 BootNotificationRetryInterval=30
 HeartbeatInterval=3600
 HttpBasicAuthent=false
