[websocket] Add option to use PEM encoded data instead of PEM file path for certificates and private keys + client certificate configuration in Charge Point role

--- a/examples/quick_start_centralsystem/config/quick_start_centralsystem.ini
+++ b/examples/quick_start_centralsystem/config/quick_start_centralsystem.ini
@@ -1,7 +1,7 @@
 [CentralSystem]
 DatabasePath=./quick_start_centralsystem.db
 JsonSchemasPath=../../schemas/ocpp16/
-ListenUrl=ws://127.0.0.1:8180/steve/websocket/CentralSystemService/
+ListenUrl=wss://127.0.0.1:8080/openocpp/
 CallRequestTimeout=2000
 WebSocketPingInterval=30
 BootNotificationRetryInterval=30
@@ -14,6 +14,5 @@ TlsServerCertificate=../../examples/certificates/open-ocpp_central-system.crt
 TlsServerCertificatePrivateKey=../../examples/certificates/open-ocpp_central-system.key
 TlsServerCertificatePrivateKeyPassphrase=
 TlsServerCertificateCa=../../examples/certificates/open-ocpp_ca.crt
-TlsClientCertificateCa=../../examples/certificates/open-ocpp_ca.crt
-TlsClientCertificateAuthent=false
+TlsClientCertificateAuthent=true
 LogMaxEntriesCount=2000
