--- a/examples/quick_start_chargepoint/config/quick_start_chargepoint.ini
+++ b/examples/quick_start_chargepoint/config/quick_start_chargepoint.ini
@@ -1,13 +1,17 @@
 [ChargePoint]
 DatabasePath=./quick_start_chargepoint.db
 JsonSchemasPath=../../schemas/ocpp16/
-ConnexionUrl=ws://127.0.0.1:8180/steve/websocket/CentralSystemService/
+ConnexionUrl=wss://127.0.0.1:8080/openocpp/
 Tlsv12CipherList=ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-WITH-AES-256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:TLS-PSK-WITH-AES-256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-WITH-AES-128-GCM-SHA256:DHE-RSA-AES128-GCM-SHA256:TLS-PSK-WITH-AES-128-GCM-SHA256
 Tlsv13CipherList=TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384
 TlsEcdhCurve=prime256v1
-TlsAllowSelfSignedCertificates=true
-TlsAllowExpiredCertificates=true
-TlsAcceptNonTrustedCertificates=true
+TlsServerCertificateCa=../../examples/certificates/open-ocpp_ca.crt
+TlsClientCertificate=../../examples/certificates/open-ocpp_charge-point.crt
+TlsClientCertificatePrivateKey=../../examples/certificates/open-ocpp_charge-point.key
+TlsClientCertificatePrivateKeyPassphrase=
+TlsAllowSelfSignedCertificates=false
+TlsAllowExpiredCertificates=false
+TlsAcceptNonTrustedCertificates=false
 TlsSkipServerNameCheck=true
 ChargePointIdentifier=ChargePointTest
 ConnectionTimeout=2000
