[schemas] Add json schemas for SecurityEventNotification, GetLog, LogStatusNotification

--- a/examples/quick_start_centralsystem/config/quick_start_centralsystem.ini
+++ b/examples/quick_start_centralsystem/config/quick_start_centralsystem.ini
@@ -1,6 +1,6 @@
 [CentralSystem]
 DatabasePath=./quick_start_centralsystem.db
-JsonSchemasPath=../../schemas/ocpp16/
+JsonSchemasPath=../../schemas/
 ListenUrl=wss://127.0.0.1:8080/openocpp/
 CallRequestTimeout=2000
 WebSocketPingInterval=30
