--- a/examples/remote_chargepoint/config/remote_chargepoint.ini
+++ b/examples/remote_chargepoint/config/remote_chargepoint.ini
@@ -1,6 +1,6 @@
 [ChargePoint]
 DatabasePath=./remote_chargepoint.db
-JsonSchemasPath=../../schemas/ocpp16/
+JsonSchemasPath=../../schemas/
 ConnexionUrl=wss://127.0.0.1:8080/openocpp/
 Tlsv12CipherList=ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-WITH-AES-256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:TLS-PSK-WITH-AES-256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-WITH-AES-128-GCM-SHA256:DHE-RSA-AES128-GCM-SHA256:TLS-PSK-WITH-AES-128-GCM-SHA256
 Tlsv13CipherList=TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384
