--- a/examples/quick_start_chargepoint/config/quick_start_chargepoint.ini
+++ b/examples/quick_start_chargepoint/config/quick_start_chargepoint.ini
@@ -29,6 +29,7 @@ MeterType=
 OperatingVoltage=230
 AuthentCacheMaxEntriesCount=1000
 LogMaxEntriesCount=2000
+SecurityLogMaxEntriesCount=1000
 
 [Ocpp]
 AllowOfflineTxForUnknownId=true
