[websocket] Add Certificate helper class

--- a/src/websockets/CMakeLists.txt
+++ b/src/websockets/CMakeLists.txt
@@ -6,6 +6,7 @@
 
 # Library target
 add_library(ws STATIC
+    Certificate.cpp
     Url.cpp
     WebsocketFactory.cpp
     libwebsockets/LibWebsocketClient.cpp
