[examples] Starting implementation of 2 examples (1 CS + 1 CP) for security extensions

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,3 +4,5 @@ add_subdirectory(common)
 add_subdirectory(quick_start_centralsystem)
 add_subdirectory(quick_start_chargepoint)
 add_subdirectory(remote_chargepoint)
+add_subdirectory(security_centralsystem)
+add_subdirectory(security_chargepoint)
