[websocket] Added SHA class helper for SHA256, SHA384 and SH512 computation

--- a/src/websockets/CMakeLists.txt
+++ b/src/websockets/CMakeLists.txt
@@ -7,6 +7,7 @@
 # Library target
 add_library(ws STATIC
     Certificate.cpp
+    Sha2.cpp
     Url.cpp
     WebsocketFactory.cpp
     libwebsockets/LibWebsocketClient.cpp
