[charge point] Add configuration key to enable/disable security events notifications

--- a/examples/quick_start_chargepoint/config/quick_start_chargepoint.ini
+++ b/examples/quick_start_chargepoint/config/quick_start_chargepoint.ini
@@ -29,6 +29,7 @@ MeterType=
 OperatingVoltage=230
 AuthentCacheMaxEntriesCount=1000
 LogMaxEntriesCount=2000
+SecurityEventNotificationEnabled=true
 SecurityLogMaxEntriesCount=1000
 
 [Ocpp]
