--- a/examples/security_chargepoint/config/security_chargepoint.ini
+++ b/examples/security_chargepoint/config/security_chargepoint.ini
@@ -29,6 +29,7 @@ MeterType=
 OperatingVoltage=230
 AuthentCacheMaxEntriesCount=1000
 LogMaxEntriesCount=2000
+InternalCertificateManagementEnabled=true
 SecurityEventNotificationEnabled=true
 SecurityLogMaxEntriesCount=1000
 
