[chargepoint] Add implementation of CA certificates management without AdditionalRootCertificateCheck

--- a/src/chargepoint/CMakeLists.txt
+++ b/src/chargepoint/CMakeLists.txt
@@ -17,6 +17,7 @@ add_library(chargepoint STATIC
     requestfifo/RequestFifo.cpp
     requestfifo/RequestFifoManager.cpp
     reservation/ReservationManager.cpp
+    security/CaCertificatesDatabase.cpp
     security/SecurityLogsDatabase.cpp
     security/SecurityManager.cpp
     smartcharging/ProfileDatabase.cpp
