--- a/src/chargepoint/CMakeLists.txt
+++ b/src/chargepoint/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library(chargepoint STATIC
     requestfifo/RequestFifoManager.cpp
     reservation/ReservationManager.cpp
     security/CaCertificatesDatabase.cpp
+    security/CpCertificatesDatabase.cpp
     security/SecurityLogsDatabase.cpp
     security/SecurityManager.cpp
     smartcharging/ProfileDatabase.cpp
