--- a/examples/remote_chargepoint/config/remote_chargepoint.ini
+++ b/examples/remote_chargepoint/config/remote_chargepoint.ini
@@ -31,6 +31,15 @@ LogMaxEntriesCount=2000
 InternalCertificateManagementEnabled=true
 SecurityEventNotificationEnabled=true
 SecurityLogMaxEntriesCount=1000
+ClientCertificateRequestHashType=sha256
+ClientCertificateRequestKeyType=ec
+ClientCertificateRequestRsaKeyLength=4096
+ClientCertificateRequestEcCurve=prime256v1
+ClientCertificateRequestSubjectCountry=France
+ClientCertificateRequestSubjectState=Savoie
+ClientCertificateRequestSubjectLocation=Chambery
+ClientCertificateRequestSubjectOrganizationUnit=Examples
+ClientCertificateRequestSubjectEmail=charge.point@open-ocpp.org
 
 [Ocpp]
 AllowOfflineTxForUnknownId=true
