[messages] Added SignedUpdateFirmware message and associated types

--- a/src/messages/CMakeLists.txt
+++ b/src/messages/CMakeLists.txt
@@ -40,6 +40,7 @@ add_library(messages STATIC
     SetChargingProfile.cpp
     SignCertificate.cpp
     SignedFirmwareStatusNotification.cpp
+    SignedFirmwareUpdate.cpp
     StartTransaction.cpp
     StatusNotification.cpp
     StopTransaction.cpp
