[x509] Added Certificate generation using CertificateRequest object and digital signature generation and verification

--- a/src/tools/x509/CMakeLists.txt
+++ b/src/tools/x509/CMakeLists.txt
@@ -1,11 +1,14 @@
 
 # X509 library
+include_directories(impl)
 add_library(x509 STATIC
     Certificate.cpp
     CertificateRequest.cpp
     PrivateKey.cpp
     Sha2.cpp
     X509Document.cpp
+
+    impl/sign.cpp
 )
 target_include_directories(x509 PUBLIC .)
 target_link_libraries(x509 helpers OpenSSL::SSL OpenSSL::Crypto)
