[config] Add support of SupportedFileTransferProtocols configuration key

--- a/examples/security_chargepoint/config/security_chargepoint.ini
+++ b/examples/security_chargepoint/config/security_chargepoint.ini
@@ -91,3 +91,4 @@ CertificateSignedMaxChainSize=10000
 CertificateStoreMaxLength=50
 CpoName=Open OCPP
 SecurityProfile=0
+SupportedFileTransferProtocols=FTP,FTPS,HTTP,HTTPS
