[make] Rework build system to obtain a single open-ocpp library in static and dynamic flavours

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,18 +15,30 @@ if(NOT DEFINED TARGET)
 endif()
 include(CMakeLists_${TARGET}.txt)
 
+# Enable position independant code for dynamic library generation
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
 # 3rd party
 add_subdirectory(3rdparty)
 
 # OpenSSL is mandatory
 find_package(OpenSSL REQUIRED COMPONENTS SSL Crypto) 
 
-# Subdirectories
-add_subdirectory(examples)
-add_subdirectory(src)
-
 # Tests
 if(${BUILD_UNIT_TESTS})
     enable_testing()
     add_subdirectory(tests)
 endif()
+
+
+# Default output directories
+if(NOT DEFINED BIN_DIR)
+    set(BIN_DIR ${CMAKE_SOURCE_DIR}/bin/${TARGET})
+endif()
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BIN_DIR})
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BIN_DIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR})
+
+# Subdirectories
+add_subdirectory(examples)
+add_subdirectory(src)
