--- a/src/tools/database/CMakeLists.txt
+++ b/src/tools/database/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 # Database library
-add_library(database STATIC 
+add_library(database OBJECT 
     Database.cpp    
 )
 target_include_directories(database PUBLIC .)
-target_link_libraries(database sqlite3)
+target_link_libraries(database PUBLIC sqlite3)
