--- a/src/tools/json/CMakeLists.txt
+++ b/src/tools/json/CMakeLists.txt
@@ -2,6 +2,6 @@
 # JSON tools library is an interface wrapper for the rapidjson
 # library which disable the warnings coming from the rapidjson's headers
 # and provides some helper classes
-add_library(json STATIC JsonValidator.cpp)
+add_library(json OBJECT JsonValidator.cpp)
 target_include_directories(json PUBLIC .)
-target_link_libraries(json rapidjson)
+target_link_libraries(json PUBLIC rapidjson)
