--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -8,7 +8,9 @@ add_library(doctest INTERFACE)
 target_include_directories(doctest INTERFACE doctest/doctest)
 
 # Use default flags for the libwebsockets library
-set(CMAKE_C_FLAGS   "-g -ggdb")
-set(CMAKE_CXX_FLAGS "-g -ggdb")
+set(CMAKE_C_FLAGS_DEBUG     "-O0 -g3 -ggdb3")
+set(CMAKE_CXX_FLAGS_DEBUG   "-O0 -g3 -ggdb3")
+set(CMAKE_C_FLAGS_RELEASE   "-O2 -DNDEBUG")
+set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")
 
 add_subdirectory(libwebsockets)
