--- a/tests/websockets/CMakeLists.txt
+++ b/tests/websockets/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 # Unit tests for Url class
 add_executable(test_websockets_url test_websockets_url.cpp)
-target_link_libraries(test_websockets_url ws doctest)
+target_link_libraries(test_websockets_url ws doctest pthread stdc++)
 add_test(
   NAME test_websockets_url
   COMMAND test_websockets_url
