--- a/tests/chargepoint/authent/CMakeLists.txt
+++ b/tests/chargepoint/authent/CMakeLists.txt
@@ -10,3 +10,11 @@ add_test(
   NAME test_authent_cache
   COMMAND test_authent_cache
 )
+
+# Unit tests for AuthentLocalList class
+add_executable(test_authent_locallist test_authent_locallist.cpp)
+target_link_libraries(test_authent_locallist unit_tests_stubs doctest sqlite3 pthread dl stdc++fs)
+add_test(
+  NAME test_authent_locallist
+  COMMAND test_authent_locallist
+)
