--- a/tests/chargepoint/authent/CMakeLists.txt
+++ b/tests/chargepoint/authent/CMakeLists.txt
@@ -18,3 +18,11 @@ add_test(
   NAME test_authent_locallist
   COMMAND test_authent_locallist
 )
+
+# Unit tests for Authent component
+add_executable(test_authent test_authent.cpp)
+target_link_libraries(test_authent unit_tests_stubs doctest sqlite3 pthread dl stdc++fs)
+add_test(
+  NAME test_authent
+  COMMAND test_authent
+)
