[chargepoint - tests] Add unit test for Connectors class

--- a/tests/chargepoint/CMakeLists.txt
+++ b/tests/chargepoint/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 # Subdirectories
 add_subdirectory(authent)
+add_subdirectory(connector)
 add_subdirectory(metervalues)
 add_subdirectory(smartcharging)
