--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@
 add_subdirectory(centralsystem)
 add_subdirectory(chargepoint)
 add_subdirectory(config)
+add_subdirectory(localcontroller)
 add_subdirectory(messages)
 add_subdirectory(rpc)
 add_subdirectory(tools)
