--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,6 +3,7 @@
 add_subdirectory(common)
 add_subdirectory(quick_start_centralsystem)
 add_subdirectory(quick_start_chargepoint)
+add_subdirectory(quick_start_localcontroller)
 add_subdirectory(remote_chargepoint)
 add_subdirectory(security_centralsystem)
 add_subdirectory(security_chargepoint)
