[json validator] Use validator on responses of call requests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,7 @@
 
+# Path to the JSON schemas
+add_definitions(-DSCHEMAS_DIR="${CMAKE_SOURCE_DIR}/schemas")
+
 # Subdirectories
 add_subdirectory(chargepoint)
 add_subdirectory(rpc)
