--- a/tests/chargepoint/smartcharging/CMakeLists.txt
+++ b/tests/chargepoint/smartcharging/CMakeLists.txt
@@ -5,7 +5,7 @@
 
 # Unit tests for ProfileDatabase class
 add_executable(test_profile_database test_profile_database.cpp)
-target_link_libraries(test_profile_database unit_tests_stubs doctest sqlite3 pthread dl stdc++fs)
+target_link_libraries(test_profile_database unit_tests_stubs doctest sqlite3 pthread dl )
 add_test(
   NAME test_profile_database
   COMMAND test_profile_database
