--- a/examples/quick_start_localcontroller/config/quick_start_localcontroller.ini
+++ b/examples/quick_start_localcontroller/config/quick_start_localcontroller.ini
@@ -2,10 +2,9 @@
 DatabasePath=./quick_start_localcontroller.db
 JsonSchemasPath=../../schemas/
 ListenUrl=wss://127.0.0.1:8080/openocpp/
+ConnexionUrl=wss://127.0.0.1:8081/openocpp/
 CallRequestTimeout=2000
 WebSocketPingInterval=30
-BootNotificationRetryInterval=30
-HeartbeatInterval=3600
 HttpBasicAuthent=false
 Tlsv12CipherList=ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-WITH-AES-256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:TLS-PSK-WITH-AES-256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-WITH-AES-128-GCM-SHA256:DHE-RSA-AES128-GCM-SHA256:TLS-PSK-WITH-AES-128-GCM-SHA256
 Tlsv13CipherList=TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384
@@ -15,5 +14,8 @@ TlsServerCertificatePrivateKey=../../examples/certificates/open-ocpp_central-sys
 TlsServerCertificatePrivateKeyPassphrase=
 TlsServerCertificateCa=../../examples/certificates/open-ocpp_ca.crt
 TlsClientCertificateAuthent=true
+TlsClientCertificate=../../examples/certificates/open-ocpp_charge-point.crt
+TlsClientCertificatePrivateKey=../../examples/certificates/open-ocpp_charge-point.key
+TlsClientCertificatePrivateKeyPassphrase=
 LogMaxEntriesCount=2000
 DisconnectFromCpWhenCsDisconnected=true
