[iso15118_pnc] Add dedicated configuration keys

--- a/examples/security_chargepoint/config/security_chargepoint.ini
+++ b/examples/security_chargepoint/config/security_chargepoint.ini
@@ -92,3 +92,8 @@ CertificateStoreMaxLength=50
 CpoName=Open OCPP
 SecurityProfile=0
 SupportedFileTransferProtocols=FTP,FTPS,HTTP,HTTPS
+CentralContractValidationAllowed=true
+CertSigningWaitMinimum=2
+CertSigningRepeatTimes=1
+ContractValidationOffline=true
+Iso15118PnCEnabled=false
