--- a/examples/security_centralsystem/config/security_centralsystem_p2.ini
+++ b/examples/security_centralsystem/config/security_centralsystem_p2.ini
@@ -16,3 +16,4 @@ TlsServerCertificatePrivateKeyPassphrase=
 TlsServerCertificateCa=../../examples/certificates/open-ocpp_ca.crt
 TlsClientCertificateAuthent=false
 LogMaxEntriesCount=2000
+Iso15118PnCEnabled=false
