[iso15118_pnc] Add iso15118 charge point and central system examples

--- a/examples/iso15118_chargepoint/config/iso15118_chargepoint.ini
+++ b/examples/iso15118_chargepoint/config/iso15118_chargepoint.ini
@@ -1,5 +1,5 @@
 [ChargePoint]
-DatabasePath=./remote_chargepoint.db
+DatabasePath=./iso15118_chargepoint.db
 JsonSchemasPath=../../schemas/
 ConnexionUrl=wss://127.0.0.1:8080/openocpp/
 Tlsv12CipherList=ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-WITH-AES-256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:TLS-PSK-WITH-AES-256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-WITH-AES-128-GCM-SHA256:DHE-RSA-AES128-GCM-SHA256:TLS-PSK-WITH-AES-128-GCM-SHA256
@@ -96,4 +96,4 @@ CentralContractValidationAllowed=true
 CertSigningWaitMinimum=2
 CertSigningRepeatTimes=1
 ContractValidationOffline=true
-Iso15118PnCEnabled=false
+Iso15118PnCEnabled=true
