--- a/examples/quick_start_chargepoint/config/quick_start_chargepoint.ini
+++ b/examples/quick_start_chargepoint/config/quick_start_chargepoint.ini
@@ -89,7 +89,7 @@ AdditionalRootCertificateCheck=false
 AuthorizationKey=abcdef
 CertificateSignedMaxChainSize=10000
 CertificateStoreMaxLength=50
-CpoName=SteVe
+CpoName=Open OCPP
 SecurityProfile=0
 SupportedFileTransferProtocols=FTP,FTPS,HTTP,HTTPS
 CentralContractValidationAllowed=true
