--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,6 +1,8 @@
 
 # Subdirectories
 add_subdirectory(common)
+add_subdirectory(iso15118_chargepoint)
+add_subdirectory(iso15118_centralsystem)
 add_subdirectory(quick_start_centralsystem)
 add_subdirectory(quick_start_chargepoint)
 add_subdirectory(quick_start_localcontroller)
