[github] Fix install runner

--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Install dependencies
+      run: sudo apt-get install -y libev-dev libuv1-dev
     - name: make gcc install
       run: make BUILD_TYPE=Release INSTALL_PREFIX=/tmp/install-gcc tests-install-gcc-native
     - name: make clang install
